--- a/client/src/components/dashboard/leaderboard/style.css
+++ b/client/src/components/dashboard/leaderboard/style.css
@@ -1,4 +1,4 @@
-/* Codepen Specific */
+
 * {
     margin:0;
     padding:0;
@@ -21,8 +21,7 @@
       border-radius: 4px;
       border: 2px solid rgba(0,0,0,0);
   }
-  /* /end Codepen Specific */
-  /* Ladder Navigation */
+
     #leaderboard {
         padding:50px;
     }
@@ -76,20 +75,19 @@
     .ladder-search input {
         color:white
     }
-    .ladder-search input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    .ladder-search input::-webkit-input-placeholder { 
         color: #888DFF;
     }
-    .ladder-search input::-moz-placeholder { /* Firefox 19+ */
+    .ladder-search input::-moz-placeholder {
         color: #888DFF;
     }
-    .ladder-search input:-ms-input-placeholder { /* IE 10+ */
+    .ladder-search input:-ms-input-placeholder { 
         color: #888DFF;
     }
-    .ladder-search input:-moz-placeholder { /* Firefox 18- */
+    .ladder-search input:-moz-placeholder { 
         color: #888DFF;
     }
-  /* /end Ladder Navigation */
-  /* Leaderboard Results */
+
   .leaderboard-results {
     text-align:left;
     border-collapse: collapse;
@@ -137,4 +135,116 @@
     background:#262626;
     color:#747474;
   }
-  /* /end Leaderboard Results */
+
+
+
+  /*******************************
+* TABLE NO MORE - RESIZE TO MOBILE SIZE
+* Format a normal table to look great on mobile.
+*******************************/
+.table {
+  overflow: hidden;
+  border-radius: 3px;
+  -webkit-box-shadow: 0 1px 6px 0 rgba(0,0,0,.12), 0 1px 6px 0 rgba(0,0,0,.12);
+     -moz-box-shadow: 0 1px 6px 0 rgba(0,0,0,.12), 0 1px 6px 0 rgba(0,0,0,.12);
+          box-shadow: 0 1px 6px 0 rgba(0,0,0,.12), 0 1px 6px 0 rgba(0,0,0,.12);
+}
+
+.table > thead > tr > th {
+  border-bottom-color: #EEEEEE;
+}
+
+.table > tbody > tr > td, 
+.table > tbody > tr > th,
+.table > thead > tr > td, 
+.table > thead > tr > th {
+  padding: 15px;
+  background-color: #fff;
+  border-top-color: #EEEEEE;
+}
+
+.table > tbody > tr:hover > td {
+  background-color: #FAFAFA;
+}
+
+@media (max-width: 767px) {
+  .table-no-more,
+  .table-no-more > thead,
+  .table-no-more > thead > tr,
+  .table-no-more > thead > tr > th,
+  .table-no-more > tbody,
+  .table-no-more > tbody > tr,
+  .table-no-more > tbody > tr > td {
+      display: block;
+  }
+  
+  .table-no-more > thead {
+      position: absolute;
+      top: -9999px;
+      left: -9999px;
+      opacity: 0;
+  }
+  
+  .table-no-more > tbody > tr > td {
+      position: relative;
+      padding-left: 45%;
+  }
+  
+  .table-no-more > tbody > tr:nth-child(even) > td {
+      background-color: #ffffff;
+  }
+  
+  .table-no-more > tbody > tr:nth-child(odd) > td {
+      background-color: #FAFAFA;
+  }
+  
+  .table-no-more > tbody > tr > td:before {
+  position: absolute;
+  top: 15px;
+  /* font-size: 20px; */
+  left: 5%;
+  width: 40%;
+  white-space: nowrap;
+      font-weight: bold;
+      word-wrap: break-word
+  }
+  
+  .table-no-more > tbody > tr > td:after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 40%;
+      height: 100%;
+      border-right: 1px solid #EEEEEE;
+      
+
+  }
+  
+  .table-no-more > tbody > tr > td:nth-of-type(1):before {content: "Address";}
+  .table-no-more > tbody > tr > td:nth-of-type(2):before {content: "Potholes detected";}
+}
+
+/* ----- v CAN BE DELETED v ----- */
+
+
+.demo {
+padding-top: 60px;
+padding-bottom: 110px;
+}
+
+.demo-footer {
+position: fixed;
+bottom: 0;
+width: 100%;
+padding: 15px;
+background-color: #212121;
+text-align: center;
+}
+
+.demo-footer > a {
+text-decoration: none;
+font-weight: bold;
+font-size: 14px;
+color: #fff;
+}
