--- a/client/src/components/reward/style.css
+++ b/client/src/components/reward/style.css
@@ -1,4 +1,9 @@
 
+body{
+    overflow-x: hidden; /* Hide vertical scrollbar */
+}
+
+
 .buttons {
     margin: 2vh;
     text-align: center;
@@ -42,4 +47,11 @@
 .btn-hover.color-9 {
     background-image: linear-gradient(to right, #25aae1, #4481eb, #04befe, #3f86ed);
     box-shadow: 0 4px 15px 0 rgba(65, 132, 234, 0.75);
+    /* padding: 10!important; */
+}
+
+@media (max-width: 768px) {
+    .btn-hover {
+        width: 90vw;
+    }
 }
